examples/test/testpolicy4581.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4581
  namespace: namespace495
spec:
  podSelector:
    matchLabels:
      key22: value17
      key27: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value26
          key27: value42
          key37: value49
      podSelector:
        matchLabels:
          key39: value23
          key10: value16
          key30: value41
